--- a/index.html
+++ b/index.html
@@ -925,50 +925,50 @@ window.addEventListener('load', () => {
         const nowShowing = [
             {
                 title: "JUJUTSU KAISEN: Shibuya Incident × The Culling Game",
-                poster: "/assets/img/jjk-shibuya.jpg",
-                hero_image: "/assets/img/jjk-shibuya-HERO.jpg", // Use landscape image for carousel
+                poster: "jjk-shibuya.jpg",
+                hero_image: "jjk-shibuya-HERO.jpg", // Use landscape image for carousel
                 synopsis: "The Shibuya Incident and Culling Game collide in a deadly chain of curses, battles, and fate-defying confrontations."
             },
             {
                 title: "Demon Slayer: The Infinity Castle",
-                poster: "/assets/img/ds.jpg",
-                hero_image: "/assets/img/ds-HERO.jpg", // Use landscape image for carousel
+                poster: "ds.jpg",
+                hero_image: "ds-HERO.jpg", // Use landscape image for carousel
                 synopsis: "Tanjiro Kamado and other members of the Demon Slayer Corps find themselves in an epic battle at Infinity Castle."
             },
             {
                 title: "Chainsaw Man – The Movie: Reze Arc",
-                poster: "/assets/img/cm.jpg",
-                hero_image: "/assets/img/cm-HERO.jpg", // Use landscape image for carousel
+                poster: "cm.jpg",
+                hero_image: "cm-HERO.jpg", // Use landscape image for carousel
                 synopsis: "he story follows Denji as he meets a mysterious and charming girl named Reze who works at a cafe. Their budding romance quickly turns into a brutal conflict when it is revealed that Reze is the Bomb Devil hybrid and a Soviet agent with an ulterior motive: to steal Denji's heart."
             },
             {
                 title: "Attack on Titan: The Last Attack",
-                poster: "/assets/img/aot.jpg",
-                hero_image: "/assets/img/aot-HERO.jpg", // Use landscape image for carousel
+                poster: "aot.jpg",
+                hero_image: "aot-HERO.jpg", // Use landscape image for carousel
                 synopsis: "The film follows the culmination of the conflict as Eren Yeager enacts The Rumbling leading an unstoppable army of Colossal Titans to trample the world outside Paradis Island in a bid to eliminate all threats to his people. A desperate alliance of Eren's former comrades and enemies, including Mikasa, Armin, and Reiner, scrambles to stop him in one final, climactic battle."
             },
             {
                 title: "Dragon Ball Super: Broly",
-                poster: "/assets/img/dbs.jpg",
-                hero_image: "/assets/img/dbs-HERO.jpg",
+                poster: "dbs.jpg",
+                hero_image: "dbs-HERO.jpg",
                 synopsis: "Earth is at peace after The Tournament of Power but Goku continues to train, knowing there are ever-stronger forces in the universe. With the arrival of a Saiyan warrior named Broly, Goku and Vegeta face their most dangerous challenge yet."
             },
             {
                 title: "Your Name",
                 poster: "https://upload.wikimedia.org/wikipedia/en/0/0b/Your_Name_poster.png",
-                hero_image: "/assets/img/your-name-HERO.jpg", 
+                hero_image: "your-name-HERO.jpg", 
                 synopsis: "Two teenagers mysteriously begin swapping bodies and form an unforgettable connection across time."
             },
             {
                 title: "Weathering With You",
-                poster: "/assets/img/wwy.jpg",
-                hero_image: "/assets/img/wwy-HERO.jpg",
+                poster: "wwy.jpg",
+                hero_image: "wwy-HERO.jpg",
                 synopsis: "A runaway boy meets a girl with the ability to control the weather, changing both their destinies forever."
             },
             {
                 title: "JUJUTSU KAISEN: Hidden Inventory / Premature Death",
-                poster: "/assets/img/jjk-hidden.jpg",
-                hero_image: "/assets/img/jjk-hidden-HERO.jpg",
+                poster: "jjk-hidden.jpg",
+                hero_image: "jjk-hidden-HERO.jpg",
                 synopsis: "The arc follows the then-inseparable second-year students, Gojo and Geto, widely recognized as the strongest duo."
             }
         ];
@@ -976,36 +976,36 @@ window.addEventListener('load', () => {
         const comingSoon = [
             {
               title: "Avengers: Doomsday",
-                poster: "/assets/img/avengers.jpg",
-                hero_image: "/assets/img/avengers-HERO.jpg", 
+                poster: "avengers.jpg",
+                hero_image: "avengers-HERO.jpg", 
                 synopsis: "The film will bring together a vast ensemble of heroes, including the Avengers, the Fantastic Four, Wakandans, New Avengers, and the X-Men, to face the existential, multiverse-spanning threat posed by Doctor Doom."
             },
             {  title: "Spider-Man: Brand New Day",
-                poster: "/assets/img/spiderman.jpg",
-                hero_image: "/assets/img/spiderman-HERO.jpg", 
+                poster: "spiderman.jpg",
+                hero_image: "spiderman-HERO.jpg", 
                 synopsis: "The fourth MCU Spider-Man film picks up after the conclusion of Spider-Man: No Way Home, where a global spell erased all knowledge of Peter Parker's identity as Spider-Man. The film is set to explore Peter's new life as he balances college and his responsibilities as a hero, now truly on his own. "
             },
             {  title: "Five Nights at Freddy's 2",
-                poster: "/assets/img/fnaf2.jpg",
-                hero_image: "/assets/img/fnaf2-HERO.jpg", 
+                poster: "fnaf2.jpg",
+                hero_image: "fnaf2-HERO.jpg", 
                 synopsis: "The horrors of Freddy Fazbear’s Pizza return as new mysteries and new animatronics emerge."
             },
             {
                 title: "Inside Out 2",
                 poster: "https://upload.wikimedia.org/wikipedia/en/f/f7/Inside_Out_2_poster.jpg",
-                hero_image: "/assets/img/insideout2-HERO.jpg",
+                hero_image: "insideout2-HERO.jpg",
                 synopsis: "Riley enters her teenage years, and brand-new emotions shake up her internal world."
             },
             {
                 title: "Frozen III",
-                poster: "/assets/img/frozen3.png",
-                hero_image: "/assets/img/frozen3-HERO.jpg",
+                poster: "frozen3.png",
+                hero_image: "frozen3-HERO.jpg",
                 synopsis: "Anna and Elsa return for another magical adventure beyond the kingdom of Arendelle."
             },
             {
                 title: "Zootopia 2",
-                poster: "/assets/img/zootopia2.jpeg",
-                hero_image: "/assets/img/zootopia2-HERO.jpg",
+                poster: "zootopia2.jpeg",
+                hero_image: "zootopia2-HERO.jpg",
                 synopsis: "Judy Hopps and Nick Wilde reunite for a new case in the bustling city of Zootopia."
             },
         
@@ -1421,4 +1421,5 @@ window.addEventListener('load', () => {
     </script>
 </body>
 </html>
+
 
